src/slider/slider.css
.slider{
    position: relative;
    display: flex;
    z-index: 2;
    justify-content:center;
}
.slider.error{
    background: grey;
    color:black;
    font-size:30px;
}
.slider .imgs{
    position: relative;
    display: flex;
    width:100%;
    justify-content: center;
}
.slider .img{
    border-radius: 10px;
    display: flex;
    position: absolute;
    height:100%;
    transition: transform 0.3s ease-in-out, display 0.3s 0s, opacity 0.3s ease-in-out, z-index 0.3s 0s, filter 0.3s ease-in-out;
    transform: translateX(0) scale(75%);
    z-index: -3;
    opacity: 0;
    overflow: hidden;
}
.slider .imgs .img#active,
.slider .imgs .img#next,
.slider .imgs .img#prev{
    opacity: 1;
    display: flex;
}
.slider .imgs .img#active{
    transform: translateX(0);
    z-index:1;
}
.slider .imgs .img#next{
    z-index:-1;
    filter: blur(4px);
}
.slider .imgs .img#prev{
    z-index:-2;
    filter: blur(4px);
}
.slider .left-arrow-container,
.slider .right-arrow-container{
    display: flex;
    position: absolute;
    height:100%;
    align-items: center;
    font-size: 25px;
}
.slider #left-arrow,
.slider #right-arrow{
    display: flex;
    opacity: 0.4;
}
.slider #left-arrow:hover,
.slider #right-arrow:hover{
    cursor:pointer;
    opacity: 0.9;
}

